# whale

./: :w  CMakeLists.txt  README.md
cmake/: build.cmake  cuda.cmake  utils.cmake
tests/: CMakeLists.txt  cpuinfo.cpp  intel.cpp  ncurse.cpp  test_basic.cpp  test_gemm.cpp  test_gemm.cpp.bk
tools/: CMakeLists.txt
tools/cmake/: build.cmake  cuda.cmake  utils.cmake
whale/: CMakeLists.txt
whale/core/: Numa.h  buffer.cpp  buffer.h  cell.h  check.h  shape.h  timer.h  types.h
whale/operation/: gemm.cpp  gemm.h  operator.cpp  operator.h
whale/sys/: bits.h  device.h
whale/sys/x86/: cpuinfo.cpp  cpuinfo.h
